--- a/frontend/findash/src/css/App.css
+++ b/frontend/findash/src/css/App.css
@@ -2,6 +2,64 @@
   text-align: center;
 }
 
+.dashboard {
+  max-width: 1200px; /* Adjust based on your requirement */
+  margin: 0 auto;
+}
+
+.top-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+  margin-bottom: 20px;
+}
+
+.main-content {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.stock-container, 
+.market-data-container {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
+  overflow-y: auto;
+  max-height: 400px; /* Adjust based on your requirement */
+}
+
+.stock-container {
+  flex-basis: 33.333%; /*Occupies 1/3 of the container */
+}
+
+.currencies-and-indices {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  flex-basis: 33.333%;
+}
+
+.market-data-container {
+  flex-basis: 100%; /* Within its parent container */
+}
+
+.details-and-news {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  flex-basis: 66.666%; /* Occupies 2/3 of the container */
+}
+
+.market-data-container[title="Market News"] {
+  flex-basis: 50%;
+}
+
+.market-data-container[title="US 10 Year Bond Yields"] {
+  flex-basis: 50%;
+}
+
 .stock-item {
   display: flex;
   justify-content: space-between;
@@ -19,6 +77,15 @@
   border: none;
   cursor: pointer;
   margin-left: 10px;
+}
+
+.login-button {
+  display: flex;
+  justify-content: center;
+  width: 180px;
+  border-radius: 7px;
+  margin-top: 10px;
+
 }
 
 .search-bar-container {
@@ -46,8 +113,10 @@
 #loginDiv {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh; /* 100% of the viewport height */
+  height: 100vh;/* 100% of the viewport height   */
+
 }
 
 #appName {
