--- a/frontend/findash/src/css/index.css
+++ b/frontend/findash/src/css/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to top, lightblue, #6495ED, darkblue);
+  background-color: #1b2a36;
   min-height: 100vh; /* Make sure the body covers the full height*/
 }
 
