--- a/frontend/findash/src/css/App.css
+++ b/frontend/findash/src/css/App.css
@@ -105,7 +105,7 @@
 
 .stock-container, 
 .market-data-container {
-  padding: 20px;
+  padding: 15px;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
   overflow-y: auto;
   max-height: 400px; /* Adjust based on your requirement */
@@ -115,33 +115,34 @@
 }
 
 .stock-container {
-  flex-basis: 33.333%; /*Occupies 1/3 of the container */
+  flex-basis: 50%; /*Occupies 1/2 of the container */
 }
 
+.detailed-stock-view {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 15 px;
+  min-width: 100px;
+  min-height: 300px;
+  flex-basis: 50%; /* Occupies 1/2 of the container */
+  border-width: 1px;
+  border-style: solid;
+  border-color:#67ad89;
+}
 .currencies-and-indices {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  flex-basis: 33.333%;
+  flex-basis: 15%;
 }
 
-.market-data-container {
-  flex-basis: 100%; /* Within its parent container */
-}
 
 .details-and-news {
+  padding-top: 20px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  flex-basis: 66.666%; /* Occupies 2/3 of the container */
-}
-
-.market-data-container[title="Market News"] {
-  flex-basis: 50%;
-}
-
-.market-data-container[title="US 10 Year Bond Yields"] {
-  flex-basis: 50%;
+  flex-direction: row;
+  flex-basis: 50%; /* Occupies 1/2 of the container */
 }
 
 .stock-item {
@@ -153,13 +154,20 @@
 .stock-item span { 
   width: 120px;
   display: inline-block;
-  /* white-space: nowrap;  */
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 .remove-button {
   background-color: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.select-button {
+  background-color: rgb(90, 133, 16);
   color: white;
   border: none;
   cursor: pointer;
@@ -186,25 +194,6 @@
   border-top: none;
   z-index: 10;
   background-color: white;
-}
-
-
-#loginDiv {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;/* 100% of the viewport height   */
-
-}
-
-#appName {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 50px;
-  color: antiquewhite;
-  font-size: 34px;
 }
 
 .App-logo {
